# Toylang

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
ast/: CMakeLists.txt
ast/include/ast/: ast.h
ast/src/: ast.cpp
kaleidoscope/: CMakeLists.txt
kaleidoscope/include/kaleidoscope/: kaleidoscope.h
kaleidoscope/src/: kaleidoscope.cpp
lexer/: CMakeLists.txt
lexer/include/lexer/: lexer.h
lexer/src/: lexer.cpp
logger/: CMakeLists.txt
logger/include/logger/: logger.h
logger/src/: logger.cpp
parser/: CMakeLists.txt
parser/include/parser/: parser.h
parser/src/: parser.cpp
src/: lexical.h  parser.h
tests/: CMakeLists.txt  lexical.cpp  parser.cpp
toylang/: CMakeLists.txt
