file(GLOB_RECURSE srcs CONFIGURE_DEPENDS src/*.cpp include/*.h)
find_package(LLVM REQUIRED)

add_library(ast STATIC ${srcs})
target_include_directories(ast PUBLIC ${LLVM_INCLUDE_DIRS})
target_include_directories(ast PUBLIC include)
# include_directories(${PROJECT_SOURCE_DIR})
target_link_libraries(ast PUBLIC ${LLVM_LIBS})
target_link_libraries(ast PUBLIC kaleidoscope)
target_link_libraries(ast PUBLIC logger)