file(GLOB_RECURSE srcs CONFIGURE_DEPENDS src/*.cpp include/*.h)
find_package(LLVM REQUIRED)
add_library(kaleidoscope STATIC ${srcs})
target_include_directories(kaleidoscope PUBLIC ${LLVM_INCLUDE_DIRS})
target_include_directories(kaleidoscope PUBLIC include)
target_link_libraries(kaleidoscope PUBLIC LLVM)